--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    username: DataUser
-    password: 123456
+    username: dbuser
+    password: 258319TBlade!
     url: jdbc:mysql://localhost:3306/scucourse?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
