--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.thymeleaf.cache=false
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=dbuser
+spring.datasource.password=258319TBlade!
+spring.datasource.url=jdbc:mysql://localhost:3306/scucourse?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout=1800
+spring.h2.console.enabled=true
+
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
