--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8088
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=dbuser
 spring.datasource.password=258319TBlade!
-spring.datasource.url=jdbc:mysql://localhost:3306/scucourse?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/scucourse?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
