--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.h2.console.enabled=true
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.default-encoding=UTF-8
+spring.mail.username=xm06_scu_class@163.com
+spring.mail.password=QZYLJHBQYZUOROPK
+
+#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
